B&L QA/objects/EMEA_Event_and_Contact_Summary__c.object
<CustomObject>
    <description>Used to store analytic snapshot information for Events with and without Contacts, including where appropriate custom details from the Contact such as title.</description>
    <fields>
        <fullName>Academic_Title__c</fullName>
        <label>Academic Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>EMEA Event and Contact Summary</relationshipLabel>
        <relationshipName>EMEA_Event_and_Contact_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <label>Contact Title</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>EMEA Event and Contact Summary</relationshipLabel>
        <relationshipName>EMEA_Event_and_Contact_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <label>End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclude__c</fullName>
        <formula>CONTAINS( Source_Table__c, &quot;2&quot;) &amp;&amp; !ISBLANK(Contact_Name__c )</formula>
        <label>Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Femto_Cataract_Vol__c</fullName>
        <label>Femto Cataract Vol</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outcome_Notes_2__c</fullName>
        <label>Outcome/Notes 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outcome_Notes_3__c</fullName>
        <label>Outcome/Notes 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outcome_Notes__c</fullName>
        <label>Outcome/Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phaco_Cataract_Vol__c</fullName>
        <label>Phaco Cataract Vol</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Focus__c</fullName>
        <label>Primary Focus</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refractive_Procedure_Volume__c</fullName>
        <label>Refractive Procedure Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Focus__c</fullName>
        <label>Secondary Focus</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Table__c</fullName>
        <label>Source Table</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TM_Name__c</fullName>
        <label>TM Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TM_Role__c</fullName>
        <label>TM Role</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tertiary_Focus__c</fullName>
        <label>Tertiary Focus</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VR_Procedure_Volume__c</fullName>
        <label>VR Procedure Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>EMEA Event and Contact Summary</label>
    <nameField>
        <displayFormat>S-{00000000}</displayFormat>
        <label>Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EMEA Event and Contact Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>